[build-system]
build-backend = 'flit_core.buildapi'
requires = ['flit_core >=3.4,<4']

[project]
name = "nest_asyncio"
description = "Patch asyncio to allow nested event loops"
version = "2.0.0a0"
authors = [
  { name = "Ewald R. de Wit"},
  { name = "Daniel Hollas", email = "danekhollas@gmail.com" },
]
readme = "README.md"
license.file = "LICENSE"
requires-python = ">=3.9"

classifiers = [
   "Development Status :: 5 - Production/Stable",
   "Intended Audience :: Developers",
   "License :: OSI Approved :: BSD License",
   "Programming Language :: Python :: 3.9",
   "Programming Language :: Python :: 3.10",
   "Programming Language :: Python :: 3.11",
   "Programming Language :: Python :: 3.12",
   "Programming Language :: Python :: 3.13",
   "Programming Language :: Python :: 3.14",
   "Programming Language :: Python :: 3 :: Only",
   "Framework :: AsyncIO",
]

[project.urls]
Homepage = "https://github.com/danielhollas/nest_asyncio"
